--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1341,3 +1341,9 @@ footer {
         display: none;
     }
 }
+
+#here{
+    background: url("assets/images/bg.jpg");
+    background-repeat: no-repeat;
+    
+}
